# walkolution-odometer

./: .claude-testing  .gitignore  CMakeLists.txt  WEAR_OS_README.md  adafruit_fonts.c  btstack_config.h  flash.c  flash.h  font.h  icons.c  icons.h  irq.c  irq.h  jiggle-acid.py  lcd_i2c.c  lcd_i2c.h  logging.c  logging.h  lwipopts.h  odometer.c  odometer.h  oled.c  oled.h  speed.c  speed.h  user_settings.c  user_settings.h  voltage.c  voltage.h  walkolution-odometer.c  walkolution-odometer.gatt
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/mypeople/walkolutionodometer/: BleService.kt  LogsActivity.kt  MainActivity.kt  PeriodicConnectionReceiver.kt  SessionCacheManager.kt  SetLifetimeTotalsActivity.kt  SettingsActivity.kt  StravaApi.kt  StravaRepository.kt  StravaSettingsActivity.kt  StravaTokenManager.kt  UserPreferencesManager.kt  WearDataSender.kt  WearMessageListener.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/wear/: build.gradle.kts
android/wear/src/main/: AndroidManifest.xml
android/wear/src/main/res/drawable/: ic_launcher_foreground.xml  ic_walkolution_small.xml
android/wear/src/main/res/values/: strings.xml
test/: CMakeLists.txt  README.md  TESTING_POLICY.md  mock_logging.c  mock_logging.h  run_tests.sh  test_speed.c
(+10 files in other folders)
